# pymixite-sample

./: README.md  setup.cfg
pymixite_sample/: __init__.py  qt_sample.ui  qt_sample_main.py  ui_control.py
src/pymixite_sample/: qt_sample.ui  qt_sample_main.py  ui_control.py
