[metadata]
name = pymixite_sample
version = 0.0.1
author = DenalidTX
author_email = DenalidTX@gmail.com
description = Demo app for the pymixite library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DenalidTX/pymixite-sample.git
project_urls =
    Bug Tracker = https://github.com/DenalidTX/pymixite-sample/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src